k8s/security/network-policy-loki.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-loki-ingress
  namespace: pedidos-veloz
spec:
  podSelector:
    matchLabels:
      app: loki
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: alloy
        - podSelector:
            matchLabels:
              app: grafana
      ports:
        - protocol: TCP
          port: 3100
